# Multi-Body-System

./: .gitignore  CMakeLists.txt  README.md
include/robotics/: body.h  endeffector.h  joint.h  mathfunction.h  robot.h
src/: main_testFourBarLinkabge.cpp  main_testFourBarLinkabgeFK.cpp  main_testFourBarLinkabgeIK.cpp
src/optimization/: main.cpp  optimization.cpp  optimizationCeres.cpp  optimizationSophus.cpp
src/robotics/: body.cpp  endeffector.cpp  joint.cpp  mathfunction.cpp  robot.cpp
